--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">	<!-- css -->
 	<title>Program App</title>
 </head>
+<style>	/* css inside html */
+
+</style>
 <body>
-	<h1>Hello world !</h1>
+	<h1>Re, [user du fichier json] !</h1>
+	<br><br><br><br><br><br>
+	<a href="connection.php">Se déconnecter</a>	<!-- A faire en bouton en css -->
+
+	</form>
 </body>
 </html>
